--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Frontend master eshop</title>
+    <script>window.__REDUX_STATE__ = '{{SSR_INITIAL_STATE}}';</script>
   </head>
   <body>
     <noscript>
