--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Frontend master eshop</title>
+    <title></title>
     <script>window.__REDUX_STATE__ = '{{SSR_INITIAL_STATE}}';</script>
+    <meta id="helmet">
   </head>
   <body>
     <noscript>
